# NCERT_SCRAPER

./: .gitignore  README.md  architecture.md  prd.md  pyproject.toml  requirements.txt  skills-lock.json
ncert_scraper/: cli.py  config.py  models.py
ncert_scraper/discovery/: __init__.py  agent.py  filtering.py  manifest.py  navigator.py  normalizer.py  state.py
ncert_scraper/processing/: __init__.py  rag_processor.py
ncert_scraper/sync/: __init__.py  downloader.py
ncert_scraper/utils/: io.py  naming.py
tests/: test_cli.py  test_discovery_agent_offline.py  test_discovery_manifest_extended.py  test_discovery_state.py  test_filtering.py  test_manifest.py  test_models.py  test_normalizer.py  test_rag_processor.py  test_sync_engine.py  test_utils_io.py  test_utils_naming.py
