[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncert-scraper"
version = "0.1.0"
description = "Playwright-first NCERT discovery and sync CLI"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.7",
  "pydantic>=2.8.2",
  "playwright>=1.52.0",
  "httpx>=0.27.2",
  "PyMuPDF>=1.26.0",
  "pytest>=8.3.2",
]

[project.scripts]
ncert-scraper = "ncert_scraper.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

